# opencl-benchmark-and-fractals

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  benchmark_fixture_html_builder.cpp  benchmark_fixture_html_builder.h  benchmark_reporter_interface.h  benchmark_time_writer_interface.h  command_line_processor.h  coordinate_formatter.cpp  coordinate_formatter.h  csv_document.h  damped_wave_fixture.h  damped_wave_fixture.inl  data_verification_failed_exception.h  fixture.h  fixture_autoregistrar.h  fixture_command_line_processor.cpp  fixture_command_line_processor.h  fixture_factories.cpp  fixture_register_macros.h  fixture_registry.h  fixture_runner.cpp  fixture_runner.h  fixture_that_returns_data.h  half_precision_normal_distribution.h  html_benchmark_reporter.cpp  html_benchmark_reporter.h  html_benchmark_time_writer.cpp  html_benchmark_time_writer.h  html_document.cpp  html_document.h  kernel_map.h  koch_curve_fixture.h  main.cpp  mapped_opencl_buffer.h  opencl_type_traits.h  operation_id.h  (+12 more)
benchmark/: CMakeLists.txt  benchmark_main.cpp
contrib/lodepng/: CMakeLists.txt
devices/: device_interface.h  opencl_device.h  opencl_platform.h  platform_interface.h  platform_list.h
document_writers/: png_document_builder.h
documents/: csv_document.h  svg_document.cpp  svg_document.h
fixtures/: damped_wave_fixture.h  damped_wave_fixture.inl  damped_wave_opencl_fixture.cpp  damped_wave_opencl_fixture.h  fixture.h  fixture_family.h  fixture_id.h  koch_curve_fixture.h  koch_curve_opencl_fixture.h  multibrot_fractal_fixture.cpp  multibrot_fractal_fixture.h  multibrot_opencl_fixture.cpp  multibrot_opencl_fixture.h  multiprecision_factorial_fixture.h  trivial_factorial_fixture.h  trivial_factorial_opencl_fixture.h
fixtures/multibrot/: multibrot_opencl_calculator.cpp  multibrot_opencl_calculator.h  multibrot_opencl_fixture.cpp  multibrot_opencl_fixture.h
indicators/: duration_indicator.cpp  duration_indicator.h  element_processing_time_indicator.cpp  element_processing_time_indicator.h  failure_indicator.cpp  failure_indicator.h  indicator_interface.h  indicator_serializer.cpp  indicator_serializer.h  indicator_value_interface.h  numeric_indicator_value.h  string_indicator_value.h  throughput_indicator.cpp  throughput_indicator.h
iterators/: data_source.h  data_source_adaptor.h  random_values_iterator.h  sequential_values_iterator.h
multibrot_console/: CMakeLists.txt  multibrot_console_main.cpp
multibrot_opencl/: CMakeLists.txt  image_partitioner.h  multibrot_opencl_calculator.cpp  multibrot_opencl_calculator.h  multibrot_parallel_calculator.cpp  multibrot_parallel_calculator.h
reporters/: benchmark_reporter.h  benchmark_results.h  html_benchmark_reporter.cpp  html_benchmark_reporter.h  json_benchmark_reporter.cpp  json_benchmark_reporter.h
run_once_debug/: CMakeLists.txt  run_once_debug_main.cpp
unit_tests/: CMakeLists.txt  global_memory_pool_tests.cpp  koch_curve_tests.cpp  opencl_math_tests.cpp  unit_tests_include.h
utils/: CMakeLists.txt  duration.cpp  duration.h  half_precision_fp.h  koch_curve_utils.h  operation_step.cpp  operation_step.h  program_build_failed_exception.cpp  program_build_failed_exception.h  program_source_repository.cpp  program_source_repository.h  utils.cpp  utils.h
